# cis_demo

./: .gitignore  README.md  dockerfile  insert_data.sql  pyproject.toml  select_defect_record_read.sql  test_item.py  test_jobs.py  test_tables.py
app/: alembic.ini  auth.py  by_pass.py  cert.pem  config.py  db.sqlite3  esquema_db.dbml  estructura.json  generate_qr.py  key.pem  main.py  main_auth.py  test_smtp.py  test_users.py
app/alembic/: env.py
app/alembic/versions/: 4aeefb90ae45_make_email_nullable.py
app/auth/: __init__.py
app/data_example/: VA330O.csv  VA330P.csv  WN675A.csv  WN675C.csv  WN685A.csv
app/db/: __init__.py  connection.py  init_db.py  insert_users.py  models.py  session.py
app/db/scripts/: crear_process_order.sql  query.sql  (+1 more)
app/documentation/: edit_patch_enpoint.md  openapi.json
app/logs_setup/: __init__.py
app/middleware/: __init__.py  admin_middleware.py  login_redirection.py
app/migrations/: env.py
app/models/: __init__.py  all_models.py  cis_models.py  client.py  item.py  job.py  material.py  object.py  object_process_stage.py  proces.py  process.py  process_stage.py  punch_list_and_defect_code.py  rework.py  role.py  scrap.py  stage.py  user.py  users.py
app/routers/: add_stage.py  auth_router.py  clients_routes.py  correction_process_router.py  defect_record_router.py  defetct_code_router.py  details.py  example.py  issue_router.py  item_router.py  item_routes.py  job_router.py  job_status.py  list_jobs.py  object_current_stage.py  object_route.py  object_router.py  ocr_routes.py  process_order.py  process_router.py  products_router.py  punch_list_router.py  rest_password_router.py  stage_router.py  status_router.py  test_jobs.py  test_route.py  user_router.py  validate_csv.py
app/schemas/: item.py
app/scripts/: update_supervisor_numbers.py
app/services/: client_services.py  example.py  item_service.py  job_services.py  ocr_service.py
app/templates/: admin.html  admin_items.html  admin_jobs.html  admin_objects.html  admin_users.html  admin_users_beta.html  base.html  base_backup.html  creat_defect.html  create_defect_backup2.html  defect_code.html  defect_codes.html  defect_records.html  defect_records_backup.html  documentation.html  home.html  index.html  info.html  issues.html  login.html  punch_list_admin.html  punchlist.html  qr.html  reset_password.html  reset_password_form.html
app/tests/: datatype_hotfix.ipynb  generate_qr.py  graph_sql.py  hash_text.py  run_sql_script.py  test_client.py  test_connection.py  test_decouple.py  test_get_items.py  test_recover.py  venv_test.py
confitest/: __init__.py
(+8 files in other folders)
