[tool.poetry]
name = "cis-fastapi"
version = "0.1.0"
description = ""
authors = ["luis314159 <luis.14xbox@live.com.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standar"], version = "^0.115.6"}
uvicorn = "^0.32.1"
fastapi-admin = "^1.0.4"
azure-cognitiveservices-vision-computervision = "^0.9.1"
msrest = "^0.7.1"
python-dotenv = "^1.0.1"
prisma-client = "^0.2.1"
sqlmodel = "0.0.24"
python-decouple = "^3.8"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
reportlab = "^4.2.5"
passlib = "^1.7.4"
pytest = "^8.3.4"
pydantic = "2.11.3"
fastapi-mail = "^1.4.2"
pydantic-settings = "^2.7.1"
pip = "^24.3.1"
pytest-asyncio = "^0.25.1"
httpx = "^0.28.1"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
qrcode = {extras = ["pil"], version = "^8.0"}
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
